feat: исправление замечаний в соответствии ТЗ-14 ver1